--- a/src/pug/components/tile.pug
+++ b/src/pug/components/tile.pug
@@ -1,5 +1,3 @@
-include /components/image.pug
-
 mixin tile(value = {})
   - let { title, content, image } = value;
   - let _class = value.class;
@@ -10,7 +8,7 @@ mixin tile(value = {})
 
     .layer-tile-footer
       if title
-        .layer-tile-title.style-bold= title
+        .layer-tile-title.font-600= title
 
       if content
-        .layer-tile-content.pt-small.style-line-height-spaced.style-font-14= content
+        .layer-tile-content= content
