--- a/src/pug/pages/404.pug
+++ b/src/pug/pages/404.pug
@@ -20,11 +20,7 @@ block content
           h1 404, Page Not Found.
           p
             | Sorry, the page you are looking for doesn't exist. How about going back 
-            +link({
-              href: "/",
-              class: "underline",
-              content: "home"
-            })
+            +link.underline home
             | .
     +footer
 
