--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -14,13 +14,21 @@ block banner
 block content
   //- Intro layer
   .container-lg
-    h3.h5.font-800 Hi, I’m Joseph.
-    | For about a decade now, I have actively sought to leave the state of things better than I found it. I am a Mechatronics engineer at heart and on paper. I integrate hardware and software into harmonious alliance to solve societal pain points. <br><br> I am always on my feet looking for the next opportunity. Through continuous improvement, determination, and a foresight of opportunity, I seek to achieve my goals. The game isn’t changed until the game is played.
+    h3.h5.font-600 Hi, I’m Olaoluwa, but people also know me as Joseph.  
+    | For about a decade now, I have actively sought to leave the state of things better than I found it. I am a Mechatronics engineer at heart and on paper. I integrate hardware and software into harmonious alliance to solve societal pain points.
+
+    br
+    br  
+
+    .blockquote-layer
+      blockquote The game is not changed until the game is played.
+
+      | I am always on my feet looking for the next opportunity. Through continuous improvement, determination, and a foresight of opportunity, I seek to achieve my goals. The game isn’t changed until the game is played.
 
   //- Skills Column layer
   .capsule-layer
     .layout
-      h3.h5.font-800 Tools of the trade
+      h3.h5.font-600 Tools of the trade
       .row.seperate-tools
         .col-6
           h4.underline Hardware Development Tools
@@ -42,15 +50,12 @@ block content
   .capsule-offset.contrast-layer
     .container-xl
       .container.max-w-screen-lg.pb-8
-        h3.h5.font-800 Recent Activities
+        h3.h5.font-600 Recent Activities
         | Here are some of the projects I have worked on. These include some ongoing and finished research projects, personal projects, as well as some old school and work projects I think you should know about.
 
       .row.col-grid
         .col-4
-          +link({
-            href: "/projects/boxer",
-            class: "block"
-          })
+          +link("/projects/boxer")
             +tile({
               title: "Boxer",
               class: "layer-box layer-surface block layer-tile-outline",
@@ -61,10 +66,7 @@ block content
             })
 
         .col-4
-          +link({
-            href: "/projects/battery-manager",
-            class: "block"
-          })
+          +link("/projects/battery-manager")
             +tile({
               title: "Battery Manager",
               class: "layer-box layer-surface block layer-tile-outline",
@@ -75,10 +77,7 @@ block content
             })
 
         .col-4
-          +link({
-            href: "/projects/sarbot",
-            class: "block"
-          })
+          +link("/projects/sarbot")
             +tile({
               title: "Search and Rescue Robot (SarBot)",
               class: "layer-box layer-surface block layer-tile-outline",
@@ -89,10 +88,7 @@ block content
             })
 
         .col-4
-          +link({
-            href: "/projects/ultima-apparel",
-            class: "block"
-          })
+          +link("/projects/ultima-apparel")
             +tile({
               title: "Ultima Apparel",
               class: "layer-box layer-surface block layer-tile-outline",
@@ -103,10 +99,7 @@ block content
             })
 
         .col-8
-          +link({
-            href: "/projects/phoenix",
-            class: "block"
-          })
+          +link("/projects/phoenix")
             +tile({
               title: "Phoenix",
               class: "layer-box layer-surface block layer-tile-outline",
@@ -117,10 +110,7 @@ block content
             })
 
         .col-12
-          +link({
-            href: "/projects/publications",
-            class: "block"
-          })
+          +link("/projects/publications")
             +tile({
               title: "Publications",
               class: "layer-box layer-surface block layer-tile-outline",
@@ -140,8 +130,8 @@ block content
           overlay: false
         })
       section
-        h3.h5.font-800 Signature
-        p.text-above-quote
+        h3.h5.font-600 Signature
+        .text-above-quote
           | If you are still reading this, you might just want to work with me. Working with me is like eating a quadruple-layer steak-filled poutine lasagna – you are not sure what you’re getting yourself into, but you’re going to have the time of your life, provided you like lasagna of course.
           br
           br
