--- a/src/pug/pages/projects/battery-manager.pug
+++ b/src/pug/pages/projects/battery-manager.pug
@@ -6,14 +6,13 @@ block pageInfo
       url: "/projects/battery-manager",
       name: "battery-manager",
       title: "Battery Manager — A tool designed to provide flexibility in a variety of research projects into batteries.",
-      description: "A tool designed to provide flexibility in the variety of research that I and future research colleagues will undertake into the field of batteries."
+      description: "The battery manager is a testing tool built to perform a multitude of experiments on battery cells and packs of different sizes. Rated for 35A, the device is capable of fast charging, cycling, fault induction and recognition and many more due to its customizability."
     };
 
 block banner
-  //- Banner layer
   +banner({
     title: "Project 2: Battery Manager (2018 – Present)",
-    content: "A tool designed to provide flexibility in the variety of research that I and future research colleagues will undertake into the field of battery technology.",
+    content: "The battery manager is a testing tool built to perform a multitude of experiments on battery cells and packs of different sizes. Rated for 35A, the device is capable of fast charging, cycling, fault induction and recognition and many more due to its customizability.",
     image: {
       src: "cloudinary/joseph-projects/battery-manager/BatteryTester_Diag",
       alt: "An image of the battery testing workstation box.",
@@ -22,92 +21,52 @@ block banner
   })
 
 block content
-  //- Intro layer
   .container-lg
-    +layout({
-      class: "layout-shorten layout-contain"
-    })
-      +main({
-        class: "py-small layout-clearfix"
-      })
-        +p
-          span.style-letter-head I
-          span.inline.margin-dull  started developing the battery manager at the beginning of my master’s research, and over the span of my two-year research, added a multitude of new capabilities.
-            br
-            br
-            | The purpose of the battery manager has been to provide complete flexibility in the variety of research that I and future researcher colleagues will undertake. Compared to commercially available alternatives, this custom-built battery manager permits the ability to swap sensors, test a variety of battery packs, add auxiliary devices, develop complex algorithms and remotely monitor tests, all the while achieving a 5-10 times cost reduction. The manager started small. With a basic bench power supply and electronic load, it could only perform tests on one or two cells at a time, and since my thesis was to contribute to the battery field with a health-conscious fast-charging algorithm for a battery pack, an upgrade was crucial.
-            br
-            br
-            | Before upgrading the system, however, we successfully completed several research projects.
-            span=" "
-            +link({
-              href: "https://www.researchgate.net/publication/344658758_A_Recurrent_Neural_Networks_Approach_for_Estimating_the_Core_Temperature_in_Lithium-Ion_Batteries",
-              content: "The first research project"
-            })(target="_blank" rel="noopener" title="The link to the publication of the first research project.")
-            |  was based on utilizing a gated recurrent neural network model (GRU) to estimate the internal temperatures in a battery cell. This is an important feature to have for cells fast-charging since a typical cell could have a vastly different temperature internally than on its surface where sensors are typically mounted.
-            span=" "
-            +link({
-              href: "https://ieeexplore.ieee.org/abstract/document/9064708",
-              content: "The second research project"
-            })(target="_blank" rel="noopener" title="The link to the publication of the second research project.")
-            |  developed on the first generation of the battery manager was a thermal fault detection method using a long short-term memory (LSTM) neural network model combined with an innovative residual monitor. The goal here was to ensure that a fast-charging battery pack includes the health and safety benefits of detecting the onset of a battery thermal failure to prevent an explosive outcome. Still on the subject on safety, the third paper extends the previously described detection method to find minor current leaks before they develop into a safety hazard.
-            br
-            br
-            | After the upgrade, the manager became more versatile, allowing testing on multiple cells in different configurations, thus, expanding the lab’s research capacity. The new system is also modular and can be expanded with additional power supplies and electronic loads. This new generation will be used while I complete my thesis on a health-conscious fast-charging algorithm for battery packs. While working on my research, I thought I should also streamline my colleagues’ workloads by providing a user interface (UI) for the manager. This will allow anyone to run basic tests with the pre-configured commands but also provide a script to run custom tests.
-            br
-            br
-            figure.mx--device-gt-tablet.style-center
-              +img-view({
-                src: "cloudinary/joseph-projects/battery-manager/01_BatteryManager",
-                alt: ""
-              })(width="814px" height="543px")
-              figcaption.mt-small.style-font-14.style-italic Figure 1: Battery Manager UI for testing battery packs
-            br
-            br
-            figure.mx--device-gt-tablet.style-center
-              +img-view({
-                src: "cloudinary/joseph-projects/battery-manager/02_DevConfig",
-                alt: ""
-              })(width="733px" height="504px")
-              figcaption.mt-small.style-font-14.style-italic Figure 2: Device Configuration UI for selecting and configuring devices
-            br
-            | As with any software product, continuous improvement and addition of new features is important, and since the platform will be for research, changes and improvements will more likely than not be necessary. Which is why I have provided the source code for the UI in the
-            span=" "
-            +link({
-              href: "https://github.com/josephojo/BatteryManager",
-              content: "BatteryManager repository"
-            })(target="_blank" rel="noopener" title="Link to BatteryManager repository on Joseph's Github account.")
-            |  on my Github account.
-            br
-            br
-            |  Although a lot of work has gone into this project, there is still more to do to improve user experience. It is my goal to improve it further and support others that might need to use or improve on it.
+    .style-letter-head I
+    |  started developing the battery manager at the beginning of my master’s research, and over the span of my two-year research, added a multitude of new capabilities.
+    br
+    br
+    | The purpose of the battery manager has been to provide complete flexibility in the variety of research that I have, and future research colleagues will undertake. Compared to commercially available alternatives, this custom-built battery manager permits the ability to swap sensors, test a variety of battery packs, add auxiliary devices, develop complex algorithms and remotely monitor tests, all the while achieving a 5-10 times cost reduction. The manager started small. With a basic bench power supply and electronic load, it could only perform tests on one or two cells at a time, and since my thesis was to contribute to the battery field with a health-conscious fast-charging algorithm for a battery pack, an upgrade was crucial.
+    br
+    br
+    | Before upgrading the system, however, we successfully completed several research projects. 
 
+    +link("https://www.researchgate.net/publication/344658758_A_Recurrent_Neural_Networks_Approach_for_Estimating_the_Core_Temperature_in_Lithium-Ion_Batteries") The first research project
+
+    |  was based on utilizing a gated recurrent neural network model (GRU) to estimate the internal temperatures in a battery cell. This is an important feature to have for cells fast-charging since a typical cell could have a vastly different temperature internally than on its surface where sensors are typically mounted.
+
+    +link("https://ieeexplore.ieee.org/abstract/document/9064708") The second research project
+
+    |   developed on the first generation of the battery manager was a thermal fault detection method using a long short-term memory (LSTM) neural network model combined with an innovative residual monitor. The goal here was to ensure that a fast-charging battery pack includes the health and safety benefits of detecting the onset of a battery thermal failure to prevent an explosive outcome. 
+    
+    | Still on the subject on safety, 
+
+    +link("/projects/publications") the third paper
+    | , extends the previously described detection method to find minor current leaks before they develop into a safety hazard.
+    br
+    br
+    | After the upgrade, the manager became more versatile, allowing testing on multiple cells in different configurations, thus, expanding the lab’s research capacity. The new system is also modular and can be expanded with additional power supplies and electronic loads. This new generation will be used while I complete my thesis on a health-conscious fast-charging algorithm for battery packs. While working on my research, I thought I should also streamline my colleagues’ workloads by providing a user interface (UI) for the manager. This will allow anyone to run basic tests with the pre-configured commands or newly developed scripts to run custom tests.
+    br
+    br
+    +img-view({
+      src: "cloudinary/joseph-projects/battery-manager/01_BatteryManager",
+      alt: "Battery Manager UI for testing battery packs"
+    })(width="814px" height="543px")
+    br
+    br
+    +img-view({
+      src: "cloudinary/joseph-projects/battery-manager/02_DevConfig",
+      alt: "Device Configuration UI for selecting and configuring devices"
+    })(width="733px" height="504px")
+    br
+    | As with any software product, continuous improvement and addition of new features is important, and since the platform will be for research, changes and improvements will more likely than not be necessary. Which is why I have provided the source code for the UI on my 
+
+    +link("https://github.com/josephojo/BatteryManager") Github account
+    | .
+    br
+    br
+    |  Although a lot of work has gone into this project, there is still more to do to improve user experience. It is my goal to improve it further and support others that might need to use or improve on it.
 
   //- Next page layer
-  +layer({
-    class: "px-small px-default--device-gt-tablet"
-  })
-    +layout({
-      class: "layout-contain-large"
-    })
-      +link({
-        href: "/projects/sarbot",
-        class: "block px-default--device-gt-tablet layer-black layer-next"
-      }, true)
-        +head({
-          class: "pt-default"
-        })
-          h3.layer-title.style-font-light.style-font-thin.style-spaceout.style-font-default--device-gt-tablet.style-font-20 Next
-          +main({
-            class: "py-sub-large"
-          })
-            p.layer-content.style-font-bold.style-400.style-font-large--device-gt-tablet.style-font-sub-large--device-lt-tablet.style-line-height Search and Rescue Robot (SarBot)
+  +next-page("/projects/sarbot", "Search and Rescue Robot (SarBot)")
 
-          //- +tile({
-          //-   class: "layer-box layer-box-flat-mobile layer-tertiary-dark layer-shadow--2 mt-larger block layer-tile-outline",
-          //-   image: {
-          //-     class: "",
-          //-     src: "cloudinary/joseph-projects/sarbot/3D_Modelling",
-          //-     alt: "An image of a 3D model of Sarbot.",
-          //-   }
-          //- })
