--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -1,4 +1,6 @@
 @use "./mixins.scss" as *;
+@use "./base.scss" as *;
+@use "./style.scss" as *;
 
 /*
     -- Layer (represents a section of code that displays content) --
@@ -63,11 +65,11 @@
     }
 
     .content {
-        @apply py-36 z-10;
+        @apply py-20 sm:py-36 z-10;
     }
 
     h1 {
-        @apply font-title font-900 text-5xl sm:text-6xl mb-4;
+        @apply font-title font-900 text-3xl sm:text-5xl md:text-6xl mb-4;
         line-height: 1;
 
         @screen md {
@@ -76,13 +78,14 @@
     }
 
     h2 {
-        @apply font-regular text-lg md:text-xl leading-relaxed;
+        @apply font-regular text-base sm:text-lg md:text-xl leading-normal md:leading-relaxed;
+        text-shadow: 0 0 theme("spacing.2") rgba(0, 0, 0, 0.3);
         font-weight: 500;
     }
 }
 
 .img-view {
-    figure.load-img {
+    figure {
         position: relative;
         overflow: hidden;
         display: flex;
@@ -99,6 +102,7 @@
                 object-fit: scale-down;
                 object-position: center center;
                 transform: scale(1);
+                opacity: 
             }
 
             .no-script-img {
@@ -121,7 +125,7 @@ html[theme="dark"] {
 .container {
     &-xl,
     &-lg {
-        @apply container px-5 sm:px-8 py-8 sm:py-16 lg:py-24 leading-8 font-500;
+        @apply container px-5 sm:px-8 py-12 sm:py-16 lg:py-16 leading-8 font-500;
     }
 
     &-lg {
@@ -167,6 +171,10 @@ html[theme="dark"] {
     & > * {
         @apply px-2 py-2;
     }
+
+    a {
+        @apply block;
+    }
 }
 
 .signature-layer {
@@ -183,7 +191,7 @@ html[theme="dark"] {
     @apply flex flex-col h-screen;
 
     h1 {
-        @apply text-3xl lg:text-5xl font-800 mb-8;
+        @apply text-3xl lg:text-5xl font-600 mb-8;
     }
 
     .container {
@@ -238,36 +246,39 @@ html[theme="dark"] {
     }
 }
 
+.blockquote-layer {
+    @apply py-3;
+    // @apply flex  lt-sm:flex-col;
+    @apply flow-root;
+}
+
+blockquote {
+    @extend .style-secondary;
+
+    @apply sm:float-right sm:w-96 relative;
+    @apply text-2xl flex items-center;
+    @apply sm:ml-3 md:ml-8 lt-sm:mb-3 uppercase leading-normal font-800;
+    transition: color ease #{$transitionDuration};
+
+    &:before {
+        position: absolute;
+        content: "\🙶";
+        opacity: 0.2;
+        transform: translate(20px, 20px) scale(5);
+        top: 0;
+        left: 0;
+    }
+}
+
+.bg {
+    @include colorList(background-color);
+}
+
+.border {
+    @include colorList(border-color);
+}
+
 .layer {
-    // font-family: $regular-font;
-    line-height: 1.85;
-    position: static;
-    font-size: 17px;
-    display: block;
-    width: 100%;
-    z-index: 0;
-
-    &-content {
-        position: relative;
-        z-index: 25;
-    }
-
-    &-shadow,
-    %shadow {
-        box-shadow: 0 0px 35px 5px change-color($dark, $alpha: 0.53);
-
-        &--1 {
-            box-shadow: 0 0 10px 2px rgba(33, 33, 33, 0.12);
-        }
-
-        &--2 {
-            box-shadow: 0 10px 85px rgba(0, 0, 0, 0.35);
-        }
-    }
-
-    &-overflow-hide {
-        overflow: hidden;
-    }
 
     .quote {
         line-height: 1;
@@ -279,53 +290,10 @@ html[theme="dark"] {
         top: -60px;
         z-index: 0;
         display: block;
-
-        // @media #{$screen-size-lt-tablet} {
-        //     visibility: hidden;
-        // }
-    }
-
-    .text-above-quote {
-        position: relative;
-        z-index: 20;
     }
 
     &-joseph-img {
         position: relative;
-        max-width: 300px;
-        height: 300px;
-        width: 300px;
-
-        & figure {
-            transition: filter ease 0.5s;
-            filter: grayscale(0);
-        }
-
-        &:hover figure {
-            filter: grayscale(1);
-        }
-
-        .layer-image-overlay {
-            background-color: transparent !important;
-            display: none;
-        }
-
-        &.left {
-            // margin-bottom: $size;
-            // margin-right: $size;
-        }
-
-        // @media #{$screen-size-lt-tablet} {
-        //     max-width: 100%;
-        // }
-
-        .placeholder-img {
-            transform: scale(1) !important;
-        }
-    }
-
-    &-joseph-img2 {
-        position: relative;
         width: 500px;
 
         .layer-image-overlay {
@@ -349,124 +317,35 @@ html[theme="dark"] {
 
         .placeholder-img {
             transform: scale(1) !important;
-        }
-    }
-    &-joseph-img3 {
-        position: relative;
-        max-width: 300px;
-        height: 450px;
-        max-height: 450px;
-        width: 500px;
-
-        .layer-image-overlay {
-            background-color: transparent !important;
-            display: none;
-        }
-
-        // &.left {
-        //     margin-bottom: $size;
-        // }
-        // @media #{$screen-size-gt-tablet} {
-        //     &.left {
-        //         margin-right: $size;
-        //     }
-        // }
-
-        // @media #{$screen-size-lt-tablet} {
-        //     max-width: 100%;
-        //     display: block;
-        // }
-
-        .placeholder-img {
-            transform: scale(1) !important;
-        }
-    }
-
-    &-secondary-btn {
-        transition: background-color #{$transitionDuration} ease;
-        @include applyTheme(background-color, "secondary-light");
-
-        &:hover,
-        &:focus {
-            @include applyTheme(background-color, "secondary");
-        }
-
-        &,
-        &:hover,
-        &:focus {
-            color: $black;
-        }
-    }
-
-    &,
-    &-bkg,
-    &-background {
-        @include colorList(background-color);
-    }
-
-    &-border {
-        $borderStyles: (
-            "solid": solid,
-            "dotted": dotted,
-            "dashed": dashed,
-            "double": double,
-            "groove": groove,
-            "ridge": ridge,
-            "inset": inset,
-            "outset": outset,
-            "hidden": hidden,
-            "none": none,
-        );
-        border: 1px solid $mid;
-
-        @include colorList(border-color);
-    }
-
-    &-round {
-        border-radius: 9999px;
-    }
-
-    &-round:focus-visible {
-        border-radius: 9999px;
-    }
-
-    a .layer-tile {
-        cursor: pointer;
-
-        &-outline .layer-image-overlay {
-            border: 4px solid transparent;
-            border-radius: 8px;
-
-            &:focus-visible {
-                border-radius: 8px;
-            }
-        }
-
-        &-outline:hover .layer-image-overlay {
-            border-color: $secondary-light;
-            border-color: var(--secondary-light, $secondary-light);
         }
     }
 
     &-tile {
         position: relative;
         min-height: 300px;
-        cursor: help;
         display: block;
         width: 100%;
 
-        &,
-        .layer-image {
-            overflow: hidden;
+        &:hover {
+            .core-img {
+                transition: opacity 0.25s ease;
+                opacity: 0;
+            }
         }
 
         &-footer {
             transition: color #{$transitionDuration} ease;
-            color: $white;
             @include applyTheme(color, "white");
+            @apply text-sm leading-relaxed px-5 py-4 font-400;
             position: absolute;
-            margin: 20px 25px;
             bottom: 0;
+            left: 0;
+        }
+
+        &-title {
+            transition: color #{$transitionDuration} ease;
+            @include applyTheme(color, "white");
+            @apply text-lg leading-loose font-600;
         }
     }
 
@@ -482,105 +361,26 @@ html[theme="dark"] {
                 border-radius: 8px;
             }
         }
-
-        &-flat {
-            &,
-            & .layer-image,
-            & .layer-image-overlay {
-                border-radius: 0 !important;
-
-                &:focus-visible {
-                    border-radius: 0 !important;
-                }
-            }
-        }
-
-        // @media #{$screen-size-lt-tablet} {
-        //     &-flat-mobile {
-        //         &,
-        //         & .layer-image,
-        //         & .layer-image-overlay {
-        //             border-radius: 0 !important;
-        //             &:focus-visible {
-        //                 border-radius: 0 !important;
-        //             }
-        //         }
-        //     }
-        // }
-
-        &-mid {
-            min-height: 600px;
-        }
-
-        &-tall {
-            width: 100%;
-            height: auto;
-            // max-height: 1600px;
-        }
-    }
-
-    &-main {
-        line-height: 2em;
-        z-index: 25;
-    }
-
-    &-action-center {
-        transition: opacity 0.4s ease-in-out;
-        pointer-events: auto;
-        font-size: 24px;
-        position: fixed;
-        bottom: 15px;
-        z-index: 250;
-        // width: 100%;
-        right: 0;
-
-        &-hide {
-            pointer-events: none;
-            opacity: 0;
-        }
-
-        &-show {
-            pointer-events: auto;
-            opacity: 1;
-        }
     }
 
     &-next {
+        transition: background-color ease #{$transitionDuration},
+            color ease #{$transitionDuration};
         background-color: $white;
         background-color: var(--very-light, $white);
+
+        text-align: center;
         overflow: hidden;
         border-radius: 12px;
         &:focus-visible {
             border-radius: 12px;
         }
 
-        // @media #{$screen-size-gt-tablet} {
-        //     border-radius: 24px;
-        //     &:focus-visible {
-        //         border-radius: 24px;
-        //     }
-        // }
-
-        .layer-title,
-        .layer-content {
+        &,
+        &:hover {
             color: $primary;
             color: var(--tertiary, $primary);
-            text-align: center;
         }
-
-        // @media #{$screen-size-phone} {
-        //     .layer-content {
-        //         font-size: 30px;
-        //     }
-        // }
-
-        // @media #{$screen-size-gt-tablet} {
-        //     margin-bottom: $size-extra-large;
-
-        //     .layer-tile {
-        //         margin-bottom: -$size-extra-large;
-        //     }
-        // }
     }
 
     &-capsule {
@@ -610,103 +410,4 @@ html[theme="dark"] {
             text-align: center;
         }
     }
-
-    // &-fieldset {
-    //     $padding-x: 1.2em;
-    //     // border: 1px solid gray;
-    //     // @include applyTheme(border-color, "mid-light");
-    //     position: relative;
-    //     // border-radius: 4px;
-    //     // padding: 0.8em 0.8em;
-    //     vertical-align: middle;
-    //     // height: 3em;
-    //     width: 100%;
-    //     margin-bottom: 2em;
-
-    //     label {
-    //         @include applyTheme(background-color, "invert-white");
-    //         transition: transform ease 0.5s;
-    //         position: absolute;
-    //         display: block;
-    //         top: 50%;
-    //         align-self: center;
-    //         line-height: 100%;
-    //         transform: translateY(-50%) scale(1);
-    //         margin-left: $padding-x - 0.25em * 2;
-    //         padding: 0 0.25em;
-
-    //         font-family: $bold-font;
-    //         // letter-spacing: 0.0525em;
-    //         font-size: 0.8rem;
-    //         @include applyTheme(color, "mid-dark");
-    //         // bottom: 38px;
-    //     }
-
-    //     input {
-    //         border: 2px solid;
-    //         @include applyTheme(border-color, "mid-dark");
-    //         position: relative;
-    //         border-radius: 3px;
-    //         &:focus-visible {
-    //             border-radius: 3px;
-    //         }
-    //         padding: 0.8em $padding-x;
-    //         vertical-align: middle;
-    //         width: 100%;
-
-    //         // @include applyTheme(background-color, "background");
-    //         @include applyTheme(background-color, "invert-white");
-    //         @include applyTheme(color, "invert-black");
-    //         outline: none;
-
-    //         &:hover {
-    //             @include applyTheme(border-color, "dark");
-    //             & ~ label {
-    //                 @include applyTheme(color, "dark");
-    //             }
-    //         }
-
-    //         &[type="email"]:invalid {
-    //             // :not(:placeholder-shown)
-    //             color: red;
-    //             border-color: red;
-
-    //             & ~ label {
-    //                 transform: translateY(-200%) scale(0.8);
-    //                 color: red;
-    //             }
-    //         }
-    //         &:valid ~ label,
-    //         &.focused ~ label,
-    //         &:focus ~ label {
-    //             transform: translateY(-200%) scale(0.8);
-    //             // top: 0;
-    //         }
-
-    //         &:focus ~ label {
-    //             @include applyTheme(color, "primary");
-    //         }
-
-    //         &:focus {
-    //             @include applyTheme(border-color, "primary");
-    //         }
-
-    //         &:valid ~ label,
-    //         &.focused ~ label {
-    //             // text-transform: uppercase;
-    //             // font-style: italic;
-    //         }
-
-    //         &:-webkit-autofill,
-    //         &:-webkit-autofill:hover,
-    //         &:-webkit-autofill:focus,
-    //         &:-webkit-autofill:active {
-    //             // -webkit-box-shadow: 0 0 0px 1000px white inset !important;
-    //             // background: transparent;
-    //             -webkit-box-shadow: 0 0 0 50px var(--invert-white) inset; /* Change the color to your own background color */
-    //             // @include applyTheme(background-color, "invert-white");
-    //             @include applyTheme(-webkit-text-fill-color, "primary-light");
-    //         }
-    //     }
-    // }
 }
