--- a/src/pug/components/navbar.pug
+++ b/src/pug/components/navbar.pug
@@ -15,10 +15,7 @@ mixin navbar(value = {})
     .navbar-overlay
     .navbar-layout
       .navbar-head
-        +link({
-          href: "/",
-          class: "navbar-title"
-        })(data-swup-preload)
+        +link.navbar-title(data-swup-preload)
           img(src="/favicon/favicon.svg" alt="Logo." itemprop="logo" width="20px" height="20px" loading="eager")
           .title-line
           | JOSEPH OJO
@@ -30,10 +27,7 @@ mixin navbar(value = {})
       .navbar-main
         each tab, i in tabs
           - let active = url.toLowerCase().includes(tab);
-          +link({
-            href: `/${tab}`,
-            class: `navbar-link`
-          })(data-swup-preload data-path=tab class={ active })
+          +link(`/${tab}`)(data-swup-preload data-path=tab class="navbar-link" class={ active })
             span.link-content= tab.replace("-", " ")
         .navbar-mobile-only
           +themeSwitcher
