--- a/src/pug/pages/projects/phoenix.pug
+++ b/src/pug/pages/projects/phoenix.pug
@@ -10,7 +10,6 @@ block pageInfo
     };
 
 block banner
-  //- Banner layer
   +banner({
     title: "Project 5: Phoenix (2015 - 2016)",
     content: "A solar panel frame I revamped while I interned at Celestica, I named this new frame Phoenix",
@@ -22,58 +21,23 @@ block banner
   })
 
 block content
-  //- Intro layer
   .container-lg
-    +layout({
-      class: "layout-shorten layout-contain"
-    })
-      +main({
-        class: "py-small layout-clearfix"
-      })
-        +p
-          span.style-letter-head D
-          span.inline.margin-dull During my time as the design engineering intern at Celestica, I was tasked with revamping an old white-label product, specifically a solar panel frame. The norm at that point had been to use some older generation frames for customers who had some flexibility with their designs and would thus like to use our in-house design. The issue, however, was that these frames were most likely too expensive for customers since the cost of solar panels were steeply dropping. Our team therefore set out to remain competitive by redesigning the white-label products. My role was to reduce the cost while possibly improving the aesthetics. Although I cannot disclose much information about the new features of the new design, the design consisted of a thinner frame made from a stronger grade aluminum (6063-T6), designed to be lighter and stronger. It also included a friction applied corner key that made manufacturing cheaper. The corner key also included mounts and plastic overmolds for aesthetics. The image below shows the corner key assembly for the designed frame set. Overall, the new set was 50% stronger and 30% cheaper than the older set, reducing the cost in a large contract by $2.4M.
-          br
-          br
-          figure.mx--device-gt-tablet.style-center
-            +img-view({
-              src: "cloudinary/joseph-projects/phoenix/01_cornerKey",
-              alt: ""
-            })(width="733px" height="596px")
-            figcaption.mt-small.style-font-14.style-italic Figure 1: An image of the frame design's blueprint
-          br
-          | While at Celestica, it was also my responsibility to run engineering, certification and mini-production builds in our prototyping factory. My responsibility was to convert designs to assembling instructions for a team of about 20 people to run. The order was typically to create the first version, try it out on my own or with a couple other more experienced engineers, find out issues with the process, fix the issues, release a new version of the assembly instructions and build it out fully with the team. Before the build, I hold a meeting with the team, secure materials and get support with reconfiguring the machines and laying out the factory lines. Here is an image of one of the new generation panels at the time.
-          br
-          br
-          figure.mx--device-gt-tablet.style-center
-            +img-view({
-              src: "cloudinary/joseph-projects/phoenix/New_Solar_Panel_1-03",
-              alt: ""
-            })(width="839px" height="629px")
-            figcaption.mt-small.style-font-14.style-italic Figure 2: An image of Joseph Ojo holding a phoenix frame based solarpanel
+    .style-letter-head D
+    | During my time as the design engineering intern at Celestica, I was tasked with revamping an old white-label product, specifically a solar panel frame. The norm at that point had been to use some older generation frames for customers who had some flexibility with their designs and would thus like to use our in-house design. The issue, however, was that these frames were most likely too expensive for customers since the cost of solar panels were steeply dropping. Our team therefore set out to remain competitive by redesigning the white-label products. My role was to reduce the cost while possibly improving the aesthetics. Although I cannot disclose much information about the new features of the new design, the design consisted of a thinner frame made from a stronger grade aluminum (6063-T6), designed to be lighter and stronger. It also included a friction applied corner key that made manufacturing cheaper. The corner key also included mounts and plastic overmolds for aesthetics. The image below shows the corner key assembly for the designed frame set. Overall, the new set was 50% stronger and 30% cheaper than the older set, reducing the cost in a large contract by $2.4M.
+    br
+    br
+    +img-view({
+      src: "cloudinary/joseph-projects/phoenix/01_cornerKey",
+      alt: "Image of the frame design's blueprint"
+    })(width="733px" height="596px")
+    br
+    | While at Celestica, it was also my responsibility to run engineering, certification and mini-production builds in our prototyping factory. My responsibility was to convert designs to assembling instructions for a team of about 20 people to run. The order was typically to create the first version, try it out on my own or with a couple other more experienced engineers, find out issues with the process, fix the issues, release a new version of the assembly instructions and build it out fully with the team. Before the build, I hold a meeting with the team, secure materials and get support with reconfiguring the machines and laying out the factory lines. Here is an image of one of the new generation panels at the time.
+    br
+    br
+    +img-view({
+      src: "cloudinary/joseph-projects/phoenix/New_Solar_Panel_1-03",
+      alt: "Image of Joseph Ojo holding a phoenix frame based solar panel"
+    })(width="839px" height="629px")
 
   //- Next page layer
-  +layout({
-    class: "layout-contain-large layer-round px-small px--device-gt-tablet"
-  })
-    +link({
-      href: "/projects/publications",
-      class: "block px-default--device-gt-tablet layer-black layer-next"
-    }, true)
-      +head({
-        class: "pt-default"
-      })
-        h3.layer-title.style-font-light.style-font-thin.style-spaceout.style-font-default--device-gt-tablet.style-font-20 Next
-        +main({
-          class: "py-sub-large"
-        })
-          p.layer-content.style-font-bold.style-400.style-font-large--device-gt-tablet.style-font-sub-large--device-lt-tablet.style-line-height Publications
-
-        //- +tile({
-        //-   class: "layer-box layer-box-flat-mobile layer-tertiary-dark layer-shadow--2 mt-larger block layer-tile-outline",
-        //-   image: {
-        //-     class: "",
-        //-     src: "cloudinary/aerial-photo-of-brown-mountains",
-        //-     alt: "An aerial photo of brown mountains by JOHN TOWNER @heytowner on Unsplash.",
-        //-   }
-        //- })
+  +next-page("/projects/publications", "Publications")
