--- a/src/pug/pages/projects/sarbot.pug
+++ b/src/pug/pages/projects/sarbot.pug
@@ -3,16 +3,16 @@ extends /layout.pug
 block pageInfo
   -
     let page = {
-
       url: "/projects/sarbot",
       name: "sarbot",
       title: "SarBot — A Search and Rescue Robot",
-      description: "A semi-autonomous robot designed to traverse a multi-leveled maze and return to the initial point with a person or object in toe."
+      description: "A semi-autonomous robot designed to traverse a multi-leveled maze and return to the initial point with a person or object in toe. SarBot was a major course project in my final year of undergrad. The objective was to emulate a search and rescue (SaR) operation for a miner trapped underground. The robot had to be semi-autonomous and had to avoid obstacles."
     };
+
 block banner
   +banner({
     title: "Project 3: SarBot (2018)",
-    content: "A semi-autonomous robot designed to traverse a multi-leveled maze and return to the initial point with a person or object in toe",
+    content: "A semi-autonomous robot designed to traverse a multi-leveled maze and return to the initial point with a person or object in toe. SarBot was a major course project in my final year of undergrad. The objective was to emulate a search and rescue (SaR) operation for a miner trapped underground. The robot had to be semi-autonomous and had to avoid obstacles.",
     image: {
       src: "cloudinary/joseph-projects/sarbot/3D_Modelling",
       alt: "An image of a 3D model of Sarbot.",
@@ -21,92 +21,51 @@ block banner
   })
 
 block content
-  //- Intro layer
   .container-lg
-    +layout({
-      class: "layout-contain-large"
-    })
-      +main({
-        class: "py-small layout-clearfix"
-      })
-        div.contain.layout-shorten-x.my
-          +p
-            span.style-letter-head T
-            span.inline.margin-dull  he SarBot or Search and Rescue Robot was a major group project in the last year of my undergraduate studies. The project was meant to test our ability to design and develop a semi-autonomous robot to traverse a multi-leveled maze and return to the initial point with a miner. This project was meant to emulate an actual rescue mission in the scenario that miners are trapped on a sub-level in a mine. The reason why a robot is used here is due to the risk to human rescuers.
-            br
-            br
-            figure.mx--device-gt-tablet.style-center
-              +img-view({
-                src: "cloudinary/joseph-projects/sarbot/2-Floor_Maze",
-                alt: ""
-              })(width="471px" height="315px")
-              figcaption.mt-small.style-font-14.style-italic Figure 1: An image of the floor Maze Sarbot had to cross
-        div.contain.layout-shorten-x.my
-          +p
-            | Due to the smaller scale of the project, the team decided to design small for easy maneuverability. Our design consisted of a unibody chassis 3D printed in 2 parts. The top part housed 3 infrared (IR) sensors, the microcontroller (Teensy 3.6), a couple of voltage converter modules and the motor controller. On the bottom level, the wheels, batteries, geared DC motor, servo motors and one more IR sensor. The final assembly is shown below.
-            br
-            br
-            figure.mx--device-gt-tablet.style-center
-              +img-view({
-                src: "cloudinary/joseph-projects/sarbot/3D_Modelling",
-                alt: ""
-              })(width="610px" height="481px")
-              figcaption.mt-small.style-font-14.style-italic Figure 2: A model of Sarbot.
-            br
-            figure.mx--device-gt-tablet.style-center
-              +img-view({
-                src: "cloudinary/joseph-projects/sarbot/3D_Printing",
-                alt: ""
-              })(width="602px" height="714px")
-              figcaption.mt-small.style-font-14.style-italic Figure 3: The 3D printing of the parts for Sarbot
-            br
-            | Our approach, although not ideal for the use case, was similar to that of some self-driving vehicle companies. We first manually mapped out the maze with waypoints. These waypoints were placed near key landmarks. These landmarks include T-junctions, cross-sections, narrower paths, steep grades, terrain changes, miner location and so on. A matrix of data was then created for each waypoint to help the robot decide what actions to take at each waypoint. Each waypoint consisted of a base command to go forward, backward, left or right, a base command controller i.e. what controller to use to complete the base command, stopping conditions for the command, manipulator commands and others. For example, a waypoint next to a turn had data such a turn right command, how many degrees the turn is, the speed required to make the turn, and what controller to use to make the turn i.e. a PID controller for robot angle.
-        div.contain.layout-shorten-x.my
-          +p
-            | Our method to secure and return the miner, in our case, a toy was a quick and quirky solution called the Swatter. The innovative design made from the most reliable materials, a metal clothes hanger and some duct tape, yep, duct tape! I think the saying goes something like this, “if you can’t fix it with duct tape, you’re not using enough duct tape” haha. All jokes aside though, it seemed to work reliably, so we left it as is, not bothering with a complex robotic arm design.
-            br
-            br
-            | At the end of it, we were awarded third place because our robot could not retrieve the miner in time, but we completed the full course as is seen in the video below. To give you a reference though, the first place could not retrieve the miner due to a mix up with their arm design, but they also completed the course. The second-place team were able to pick up the miner but could not fully make it to the initial point. All in all a wonderful accomplishment to be recognized for our hard work.
-            br
-            br
-            figure.mx--device-gt-tablet.style-center
-              +img-view({
-                src: "cloudinary/joseph-projects/sarbot/Final_Build",
-                alt: ""
-              })(width="480px" height="452px")
-              figcaption.mt-small.style-font-14.style-italic Figure 4: The finalized model of Sarbot
-            br
-            br
-            figure.mx--device-gt-tablet.style-center
-              section(class="block mb-smaller")
-                video.full-width(controls='' name='media')
-                  source(src='https://res.cloudinary.com/okikio-assets/video/upload/v1618904172/joseph-projects/sarbot/Joseph_s_Trimmed_Video.mp4' type='video/mp4')
+    .style-letter-head T
+    | he SaRBot or Search and Rescue Robot was a major group project in the last year of my undergraduate studies. The project was meant to test our ability to design and develop a semi-autonomous robot to traverse a multi-leveled maze and return to the initial point with a miner. This project was meant to emulate an actual rescue mission in the scenario that miners are trapped on a sub-level in a mine. The reason why a robot is used here is due to the risk to human rescuers.
+    br
+    br
+    +img-view({
+      src: "cloudinary/joseph-projects/sarbot/2-Floor_Maze",
+      alt: "Image of the floor Maze Sarbot had to cross"
+    })(width="471px" height="315px")    
+    br
+    br
+    | Due to the smaller scale of the project, the team decided to design small for easy maneuverability. Our design consisted of a unibody chassis 3D printed in 2 parts. The top part housed 3 infrared (IR) sensors, the microcontroller (Teensy 3.6), a couple of voltage converter modules and the motor controller. On the bottom level, the wheels, batteries, geared DC motor, servo motors and one more IR sensor. The final assembly is shown below.
+    br
+    br
+    +img-view({
+      src: "cloudinary/joseph-projects/sarbot/3D_Modelling",
+      alt: "A model of Sarbot"
+    })(width="610px" height="481px")
+    br
+    +img-view({
+      src: "cloudinary/joseph-projects/sarbot/3D_Printing",
+      alt: "The 3D printing of the parts for Sarbot"
+    })(width="602px" height="714px")
+    br
+    br
+    | Our approach, although not ideal for the use case, was similar to that of some self-driving vehicle companies. We first manually mapped out the maze with waypoints. These waypoints were placed near key landmarks. These landmarks include T-junctions, cross-sections, narrower paths, steep grades, terrain changes, miner location and so on. A matrix of data was then created for each waypoint to help the robot decide what actions to take at each waypoint. Each waypoint consisted of a base command to go forward, backward, left or right, a base command controller i.e. what controller to use to complete the base command, stopping conditions for the command, manipulator commands and others. For example, a waypoint next to a turn had data such a turn right command, how many degrees the turn is, the speed required to make the turn, and what controller to use to make the turn i.e. a PID controller for robot angle.
+    br
+    br
+    | Our method to secure and return the miner, in our case, a lego construction worker, was a quick and quirky solution called the Swatter. The innovative design made from the most reliable materials, a metal clothes hanger and some duct tape, yep, duct tape! I think the saying goes, “if you can’t fix it with duct tape, you’re not using enough duct tape” haha 🤣. All jokes aside though, it seemed to work reliably, so we left it as is, not bothering with a complex robotic arm design.
+    br
+    br
+    +img-view({
+      src: "cloudinary/joseph-projects/sarbot/Final_Build",
+      alt: "The finalized model of Sarbot"
+    })(width="480px" height="452px")
+    br
+    br
+    | At the end of it, we were awarded third place because our robot could not retrieve the miner in time, but we completed the full course as is seen in the video below. To give you a reference though, the first place could not retrieve the miner due to a mix up with their arm design, but they also completed the course. The second-place team were able to pick up the miner but could not fully make it to the initial point. All in all, a wonderful accomplishment to be recognized for our hard work.
+    br
+    br
+    figure.text-center
+      video.w-full(controls name='media')
+        source(src='https://res.cloudinary.com/okikio-assets/video/upload/v1618904172/joseph-projects/sarbot/Joseph_s_Trimmed_Video.mp4' type='video/mp4')
 
-              figcaption.mt-small.style-font-14.style-italic Figure 5: A video displaying the capabilities of the final design of SarBot
+      figcaption.italic Video displaying the capabilities of the final design of SarBot
 
   //- Next page layer
-
-  +layout({
-    class: "layout-contain-large layer-round px-small px--device-gt-tablet"
-  })
-    +link({
-      href: "/projects/ultima-apparel",
-      class: "block px-default--device-gt-tablet layer-black layer-next"
-    }, true)
-      +head({
-        class: "pt-default"
-      })
-        h3.layer-title.style-font-light.style-font-thin.style-spaceout.style-font-default--device-gt-tablet.style-font-20 Next
-        +main({
-          class: "py-sub-large"
-        })
-          p.layer-content.style-font-bold.style-400.style-font-large--device-gt-tablet.style-font-sub-large--device-lt-tablet.style-line-height Ultima Apparel
-
-        //- +tile({
-        //-   class: "layer-box layer-box-flat-mobile layer-tertiary-dark layer-shadow--2 mt-larger block layer-tile-outline",
-        //-   image: {
-        //-     class: "",
-        //-     src: "cloudinary/joseph-projects/ultima-apparel/Proof_of_Concept_1",
-        //-     alt: "An image of Ultima Apparels first proof of concept.",
-        //-   }
-        //- })
+  +next-page("/projects/ultima-apparel", "Ultima Apparel")
