--- a/src/pug/pages/sitemap.pug
+++ b/src/pug/pages/sitemap.pug
@@ -3,7 +3,6 @@ extends /layout.pug
 block pageInfo
   -
     let page = {
-
       url: "/sitemap",
       name: "sitemap",
       title: "Sitemap — A list of all pages with descriptions.",
@@ -16,97 +15,43 @@ block preload
 block content
   .navbar-top-spot
   .container-lg
-    h1.h4.font-800.text-center Sitemap
-    | The sitemap lists all pages and gives brief descriptions to help you find your way.
+    .text-center
+      h1.h4.font-600 Sitemap
+      | The sitemap lists all pages and gives brief descriptions to help you find your way.
     ul
-      //- Index
       li
-        +link({
-          href: "/",
-          class: "italic underline",
-          content: "Home"
-        }) 
-        |  - Homepage galor, its the begining of our little adventure.
+        +link.italic.underline Home
+        |   -  The homepage, its the begining of our little adventure.
+      li
+        +link("/about").italic.underline About
+        |   -  What drove me to become a Mechatronics Engineer and why? I explore my life story, as well as my passion for engineering.
+      li
+        +link("/portfolio").italic.underline Portfolio
+        |   -  Hardwork and perseverance, hear all about it. A showcase of projects I have completed, and even some that are still on-going.
         br
 
-      //- About
-      li
-        +link({
-          href: "/about",
-          class: "italic underline"
-        }) About
-        |  - What drove me to become a Mechatronics Engineer and why? I explore my life story, as well as my passion for engineering.")
-
-      //- Projects
-      li
-        +link({
-          href: "/portfolio",
-          class: "italic underline"
-        }) Portfolio
-        |  - Hardwork and perseverance, hear all about it. A showcase of projects I have completed, and even some that are still on-going.")
-        br
+        //- Projects
         ul
-          //- Boxer
           li
-            +link({
-              href: "/projects/boxer",
-              class: "italic underline"
-            })
-              span(itemprop="name") Boxer
-            +p("- An autonomous robotic platform very similar to a conventional vehicle due to its ackerman steering design, and independent suspension.")
-            br
-          //- Battery Manager
+            +link( "/projects/boxer").italic.underline Boxer
+            |   -  An autonomous robotic platform very similar to a conventional vehicle due to its ackerman steering design, and independent suspension.
           li
-            +link({
-              href: "/projects/battery-manager",
-              class: "italic underline"
-            })
-              span(itemprop="name") Battery Manager
-            +p("- A tool designed to provide flexibility in the variety of research that I, and future research colleagues will undertake into the field of batteries.")
-            br
-          //- SarBot
+            +link("/projects/battery-manager").italic.underline Battery Manager
+            |   -  A tool designed to provide flexibility in the variety of research that I, and future research colleagues will undertake into the field of batteries.
           li
-            +link({
-              href: "/projects/sarbot",
-              class: "italic underline"
-            })
-              span(itemprop="name") SarBot
-            +p("- A semi-autonomous robot designed to traverse a multi-leveled maze and return to the initial point with a person in toe.")
-            br
-          //- Ultima Apparel
+            +link("/projects/sarbot").italic.underline SarBot
+            |   -  A semi-autonomous robot designed to traverse a multi-leveled maze and return to the initial point with a person in toe.
           li
-            +link({
-              href: "/projects/ultima-apparel",
-              class: "italic underline"
-            })
-              span(itemprop="name") Ultima Apparel
-            +p("- Enhanced sportsware designed to improve posture and track workout form.")
-            br
-          //- Phoenix
+            +link("/projects/ultima-apparel").italic.underline Ultima Apparel
+            |   -  Enhanced sportsware designed to improve posture and track workout form.
           li
-            +link({
-              href: "/projects/phoenix",
-              class: "italic underline"
-            })
-              span(itemprop="name") Phoenix
-            +p("- A solar panel frame I revamped while I interned at Celestica, I named this new frame Phoenix.")
-            br
-          //- Publications
+            +link("/projects/phoenix").italic.underline Phoenix
+            |   -  A solar panel frame I revamped while I interned at Celestica, I named this new frame Phoenix.
           li
-            +link({
-              href: "/projects/publications",
-              class: "italic underline"
-            })
-              span(itemprop="name") Academic Publications
-            +p("- A list of publications I completed while studying for my masters at OntarioTech University.")
-            br
+            +link("/projects/publications").italic.underline Academic Publications
+            |   -  A list of publications I completed while studying for my masters at OntarioTech University.
 
-      //- Contact
       li
-        +link({
-          href: "/contact",
-          class: "italic underline"
-        })
-          span(itemprop="name") Contact
-        +p("- Do you have a project that demands perservance and passion? Then, lets talk.")
-        br
+        +link("/contact").italic.underline Contact
+        |   -  Do you have a project that demands perservance and passion? Then, lets talk.
+        
